update getPageTemplates API of PageTemplateService